kubernetes-gateway.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mpm-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  backend:
    serviceName: mpmbackend
    servicePort: 5000
